# mic_host

./: Cargo.toml  README.md  cal_model.py  calibrate.py  datasource.py  kernel.py  play.py  pyproject.toml  record_audio.py  utils.py  view_plane.py  view_volume.py
src/: cic.rs  correlate.rs  lib.rs
